tests/typechecker/should_pass/polymorphic_extendables.csp
datatype Signal = Claim_Secret.Int.Int
channel signal : Signal

f(s_) = {| signal.Claim_Secret.s_ |}

test1 = f(0)
