tests/typechecker/should_fail/tock_type.csp
channel tock : {0}

Timed (\ _ @ 0) { }
